--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongo-java-driver</artifactId>
+    	<version>2.11.3</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
