--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,17 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.arquillian</groupId>
+            <artifactId>arquillian-bom</artifactId>
+            <version>1.1.2.Final</version>
+            <scope>import</scope>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.jboss.spec</groupId>
@@ -24,6 +35,33 @@
     	<artifactId>mongo-java-driver</artifactId>
     	<version>2.11.3</version>
     </dependency>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.11</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.jboss.arquillian.junit</groupId>
+    	<artifactId>arquillian-junit-container</artifactId>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.jboss.as</groupId>
+        <artifactId>jboss-as-arquillian-container-managed</artifactId>
+        <version>7.1.1.Final</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.jboss.arquillian.protocol</groupId>
+    	<artifactId>arquillian-protocol-servlet</artifactId>
+    	<scope>test</scope>
+    </dependency>
+	<dependency>
+		<groupId>org.jboss.shrinkwrap.resolver</groupId>
+		<artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -44,6 +82,12 @@
             </configuration>
           </plugin>
         </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>arquillian</id>
+      <build>
+        <finalName>test</finalName>
       </build>
     </profile>
   </profiles>
