--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
     	<version>2.11.3</version>
     </dependency>
     <dependency>
+        <groupId>org.apache.deltaspike.core</groupId>
+        <artifactId>deltaspike-core-impl</artifactId>
+        <version>0.5</version>
+    </dependency>
+    <dependency>
     	<groupId>junit</groupId>
     	<artifactId>junit</artifactId>
     	<version>4.11</version>
@@ -88,6 +93,11 @@
       <id>arquillian</id>
       <build>
         <finalName>test</finalName>
+        <resources>
+          <resource>
+            <directory>${project.basedir}/src/test/resources</directory>
+          </resource>
+        </resources>
       </build>
     </profile>
   </profiles>
